# skin-temperature-scanner

./: .gitignore  CMakeLists.txt  Dockerfile.aarch64  Dockerfile.template  LICENSE  README.md
resources/boot/: config.txt
resources/images/: anim.afphoto
src/: ThermalCamera.cpp  ThermalCamera.h  colormap.h  constants.h  main.cpp
